tests/unit/default/syntax-error/158-alter-table-dot.x.t
---- IN ----
*%table.|
---- OUT ----
---- ERR ----
syntax: expected <alter-column> after `*%table.` near `|` at position 8 - at line 1
---- EXIT ----
1
